HK3_2018-2019/CS163/27-05-19/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
07:50:28 **** Build of configuration Debug for project BST ****
make all 
Building file: ../main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: BST
Invoking: Cross G++ Linker
g++  -o "BST"  ./main.o   
Finished building target: BST
 
08:00:01 **** Incremental Build of configuration Debug for project BST ****
make all 
Building file: ../main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: BST
Invoking: Cross G++ Linker
g++  -o "BST"  ./main.o   
Finished building target: BST
 
08:01:09 **** Incremental Build of configuration Debug for project BST ****
make all 
make: Nothing to be done for 'all'.
08:01:45 **** Incremental Build of configuration Debug for project BST ****
make all 
Building file: ../main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: BST
Invoking: Cross G++ Linker
g++  -o "BST"  ./main.o   
Finished building target: BST
 
08:03:09 **** Incremental Build of configuration Debug for project BST ****
make all 
make: Nothing to be done for 'all'.
08:03:20 **** Incremental Build of configuration Debug for project BST ****
make all 
make: Nothing to be done for 'all'.
08:15:07 **** Incremental Build of configuration Debug for project BST ****
make all 
make: Nothing to be done for 'all'.
08:15:15 **** Incremental Build of configuration Debug for project BST ****
make all 
make: Nothing to be done for 'all'.
08:15:20 **** Incremental Build of configuration Debug for project BST ****
make all 
make: Nothing to be done for 'all'.
08:15:28 **** Incremental Build of configuration Debug for project BST ****
make all 
make: Nothing to be done for 'all'.
08:15:33 **** Incremental Build of configuration Debug for project BST ****
make all 
make: Nothing to be done for 'all'.
08:15:40 **** Incremental Build of configuration Debug for project BST ****
make all 
make: Nothing to be done for 'all'.
08:21:41 **** Incremental Build of configuration Debug for project BST ****
make all 
Building file: ../main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: BST
Invoking: Cross G++ Linker
g++  -o "BST"  ./main.o   
Finished building target: BST
 
08:22:24 **** Incremental Build of configuration Debug for project BST ****
make all 
make: Nothing to be done for 'all'.
09:18:40 **** Incremental Build of configuration Debug for project BST ****
make all 
Building file: ../main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
../main.cpp: In function ‘void LCA(Node*, int, int, Node*&, int&, int&)’:
../main.cpp:62:12: error: ‘LeftY’ was not declared in this scope
  int LeftX=LeftY=RightX=RightY=0;
            ^~~~~
../main.cpp:62:12: note: suggested alternative: ‘LeftX’
  int LeftX=LeftY=RightX=RightY=0;
            ^~~~~
            LeftX
../main.cpp:62:18: error: ‘RightX’ was not declared in this scope
  int LeftX=LeftY=RightX=RightY=0;
                  ^~~~~~
../main.cpp:62:25: error: ‘RightY’ was not declared in this scope
  int LeftX=LeftY=RightX=RightY=0;
                         ^~~~~~
../main.cpp:62:6: warning: unused variable ‘LeftX’ [-Wunused-variable]
  int LeftX=LeftY=RightX=RightY=0;
      ^~~~~
subdir.mk:18: recipe for target 'main.o' failed
make: *** [main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
